<?xml version="1.0" encoding="utf-8"?>
<layout>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:padding="10dp">
        <TextView
            style="@style/TextView18_bold"
            android:text="@string/total_amount"/>
        <TextView
            style="@style/TextView18"
            android:layout_marginStart="10dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/ruppe_symbol"/>
        <TextView
            style="@style/TextView18"
            android:id="@+id/finalAmountTextView"
            android:layout_marginStart="5dp"
            android:textColor="@color/colorPrimary"
            android:maxLength="20"
            android:text="@string/zero"/>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/payment_details_layout"
        style="@style/parent_width_match_parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:background="@color/background_purple">
        <TextView
            style="@style/TextView18"
            android:layout_margin="10dp"
            android:textColor="@color/text_primary"
            android:text="@string/payment_details"/>

    </LinearLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/payment_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_margin="10dp"
        app:singleLine="false"/>
    <TextView
        android:id="@+id/add_payment_btn"
        style="@style/TextView_14_hyperlink"
        android:text="@string/add_payment_underline"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/save_button"
        style="@style/parent_width_match_parent"
        android:text="@string/save"
        android:layout_margin="20dp"
        android:textColor="@color/text_primary_reverse"
        android:layout_marginTop="16dp"/>


</LinearLayout>
</layout>