<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/parent_match_parent"
        android:background="@color/background_primary"
        android:orientation="vertical"
        android:padding="20dp">
       <LinearLayout
           style="@style/parent_width_match_parent"
           android:gravity="center_vertical"
           android:orientation="horizontal">
           <TextView
               style="@style/TextView18_bold"
               android:width="0dp"
               android:layout_weight="1"
               android:layout_marginTop="15dp"
               android:layout_marginBottom="15dp"
               android:text="@string/add_payment"
               android:textColor="@color/text_primary" />
           <ImageView
             style="@style/parent_wrap_content"
               android:src="@drawable/ic_close_icon"
               android:id="@+id/closeBtn"/>
       </LinearLayout>
        <androidx.core.widget.NestedScrollView
            style="@style/parent_width_match_parent">
            <LinearLayout
                style="@style/parent_width_match_parent"
                android:orientation="vertical">
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_fund"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:errorEnabled="true"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amountEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_rupee_icon"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:focusable="auto"
                        android:textColor="@color/text_primary" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/select_payment_type"
                    app:errorEnabled="true"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="dropdown_menu">

                    <com.google.android.material.textfield.MaterialAutoCompleteTextView
                        android:id="@+id/payment_type_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:paddingVertical="16dp"
                        android:paddingStart="16dp"
                        tools:ignore="RtlSymmetry" />
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    style="@style/parent_width_match_parent"
                    android:id="@+id/bankDetailsLayout"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/bank_name"
                        app:errorEnabled="true"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="2dp"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/bankNameEditText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/text_primary" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <LinearLayout
                    style="@style/parent_width_match_parent"
                    android:id="@+id/creditCardDetailsLayout"
                    android:visibility="gone"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/credit_card_number"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="2dp"
                        app:errorEnabled="true"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/credit_card_number_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLength="16"
                            android:textColor="@color/text_primary" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/mmYYYY"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="2dp"
                        app:errorEnabled="true"
                        app:endIconMode="clear_text">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/expiry_date_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:textColor="@color/text_primary" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/transactionIdLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:errorEnabled="true"
                    android:visibility="gone"
                    android:hint="@string/transaction_id"
                    app:boxStrokeColor="@color/colorPrimary"
                    app:boxStrokeWidth="2dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/transactionIdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"

                        android:inputType="text"
                        android:textColor="@color/text_primary" />
                </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:id="@+id/add_fund_btn"
                    style="@style/parent_width_match_parent"
                    android:layout_margin="20dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/save"
                    android:visibility="gone"
                    android:textColor="@color/text_primary_reverse" />

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>